apps/namespace-bootstrapper/team-a/1-namespace-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: team-a
spec:
  podSelector: {}  # Applies to all pods in the namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}  # Allow traffic from all pods in the same namespace
